--- a/src/options.html
+++ b/src/options.html
@@ -17,7 +17,7 @@
 
       <label>
         <textarea id="blacklist" placeholder="eg. mail.google." rows="8" wrap="off"></textarea>
-        <br /><small>Disabled automated sampling for these pages, one per line</small>
+        <br /><small>Disable timer for these pages, one per line</small>
       </label>
 
       <label>
