--- a/options.html
+++ b/options.html
@@ -41,6 +41,7 @@
 
       textarea {
         box-sizing: border-box;
+        font: 0.6875rem/1.5 'Menlo', 'Andale Mono', 'Courier New', monospace;
         max-width: 30rem;
         width: 100%;
       }
@@ -52,19 +53,12 @@
 
       .flash {
         color: #999;
-      }
-
-      .flash {
         max-width: 200px;
         overflow: hidden;
         padding-left: 0.25rem;
         text-overflow: ellipsis;
         vertical-align: middle;
         white-space: nowrap;
-      }
-
-      .flash span {
-        text-decoration: underline;
       }
     </style>
   </head>
@@ -73,13 +67,13 @@
     <form>
       <div>
         <label>
-          <input id="rate" type="number" min="1" max="20" step=".1" />
+          <input id="period" type="number" min="1" max="20" step=".1" />
           <span>Refresh rate <small>in minutes</small></span>
         </label>
       </div>
       <div>
         <label>
-          <textarea id="blacklist" placeholder="eg. mail.google." rows="8" wrap="off"></textarea>
+          <textarea id="ignore" placeholder="eg. mail.google." rows="8" wrap="off"></textarea>
           <div>
             <span>Disable timer for these pages <small>one per line</small></span>
           </div>
@@ -92,14 +86,8 @@
         </label>
       </div>
       <div>
-        <label>
-          <input id="freeze" type="checkbox" />
-          <span>Disable timer</span>
-        </label>
-      </div>
-      <div>
         <p>
-          <input id="save" type="button" value="Save" />
+          <input id="store" type="button" value="Save" />
           <input id="reset" type="button" value="Reset" />
           <span id="flash" class="flash"></span>
         </p>
